Fix test for windows